Iniciada la memoria de la colaboración

--- a/3 GII/Colaboracion/Estilos/Apuntes.sty
+++ b/3 GII/Colaboracion/Estilos/Apuntes.sty
@@ -7,10 +7,10 @@
   pdfwindowui=false,%
   pdfview=Fit,%
   pdfstartview=Fit,%
-  pdftitle={Memoria DBM}, %<--------------- Título del Resumen ------------------->
-  pdfkeywords={DBM},
+  pdftitle={Seguridad en redes WiFi}, %<--------------- Título del Resumen ------------------->
+  pdfkeywords={Alumnos colaboradores de Mercedes Rodríguez García},
   pdfauthor={Jesús Rodríguez Heras}, % <--------------- Autor del PDF --------------------->
-  pdfsubject={DBM},
+  pdfsubject={Mercedes Rodríguez García},
   colorlinks=true,
   linkcolor=Red4,
   citecolor=Red3,
@@ -75,7 +75,7 @@
                             \emph{Grado en Ingeniería Informática\hfill Escuela Superior de Ingeniería}}}
               \renewcommand{\@oddhead}{%
                             \hss\vbox{%
-                            \emph{Diseño Basado en Microprocesadores\hfill Altavoz bluetooth}}}
+                            \emph{Seguridad en redes WiFi\hfill Mercedes Rodríguez García}}}
               \renewcommand{\@oddfoot}{\hfill\normalsize\rm\thepage\hfill}
               \renewcommand\@evenfoot{{\hfill\normalsize\rm\thepage\hfill}}}
 %%
