Añadida la presentación y creada la carpeta que contiene la memoria

--- a/3 GII/Colaboracion/Memoria/Cap2.tex
+++ b/3 GII/Colaboracion/Memoria/Cap2.tex
@@ -1,4 +1,5 @@
 \chapter{Espionaje en red WPA2-PSK}
+De las dos versiones de WPA2 existentes, nos centraremos en WPA2-PSK para la práctica.
 \section{Conocemos la passphrase}
 
 \section{No conocemos la passphrase}
