--- a/3 GII/Colaboracion/Memoria/Memoria.tex
+++ b/3 GII/Colaboracion/Memoria/Memoria.tex
@@ -74,7 +74,7 @@
 % }
 % \end{verbatim}
 
-\title{\Huge Seguridad en redes WIFI}
+\title{\Huge Seguridad en redes Wi-Fi}
 \author{Jesús Rodríguez Heras\\Juan Pedro Rodríguez Gracia}
 \date{Alumnos colaboradores de: \textbf{Mercedes Rodríguez García}}
 
