Añadido el informe de la colaboración

--- a/3 GII/Colaboracion/Memoria/Cap2.tex
+++ b/3 GII/Colaboracion/Memoria/Cap2.tex
@@ -77,7 +77,7 @@ Hasta aquí quedaría configurado el ARP Poisoning. Por lo tanto, cuando el usua
 \newpage
 Por lo tanto, el escenario resultante después de la configuración del ARP Poisoning es el siguiente:
 \begin{center}
-	\includegraphics[scale=0.7]{escenario.png}
+	\includegraphics[scale=0.7]{Escenario.png}
 \end{center}
 
 \Nota En estos ejemplos se ha usado la página web \url{http://minecub.es/} por tener protoclo HTTP.
