--- a/3 GII/Colaboracion/Memoria/Estilos/Apuntes.sty
+++ b/3 GII/Colaboracion/Memoria/Estilos/Apuntes.sty
@@ -7,8 +7,8 @@
   pdfwindowui=false,%
   pdfview=Fit,%
   pdfstartview=Fit,%
-  pdftitle={Seguridad en redes WiFi}, %<--------------- Título del Resumen ------------------->
-  pdfkeywords={Alumnos colaboradores de Mercedes Rodríguez García},
+  pdftitle={Seguridad en redes Wi-Fi}, %<--------------- Título del Resumen ------------------->
+  pdfkeywords={Alumno colaborador de Mercedes Rodríguez García},
   pdfauthor={Jesús Rodríguez Heras}, % <--------------- Autor del PDF --------------------->
   pdfsubject={Mercedes Rodríguez García},
   colorlinks=true,
@@ -75,7 +75,7 @@
                             \emph{Grado en Ingeniería Informática\hfill Escuela Superior de Ingeniería}}}
               \renewcommand{\@oddhead}{%
                             \hss\vbox{%
-                            \emph{Seguridad en redes WiFi\hfill Mercedes Rodríguez García}}}
+                            \emph{Seguridad en redes Wi-Fi\hfill Jesús Rodríguez Heras}}}
               \renewcommand{\@oddfoot}{\hfill\normalsize\rm\thepage\hfill}
               \renewcommand\@evenfoot{{\hfill\normalsize\rm\thepage\hfill}}}
 %%
