--- a/3 GII/Colaboracion/Memoria/Memoria.tex
+++ b/3 GII/Colaboracion/Memoria/Memoria.tex
@@ -75,14 +75,17 @@
 % \end{verbatim}
 
 \title{\Huge Seguridad en redes Wi-Fi}
-\author{Jesús Rodríguez Heras\\Juan Pedro Rodríguez Gracia}
-\date{Alumnos colaboradores de: \textbf{Mercedes Rodríguez García}}
+\author{Jesús Rodríguez Heras}
+\date{Alumno colaborador de: \textbf{Mercedes Rodríguez García}}
 
 %%Configuracion del paquete listings
 \lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1}
 
+
 \begin{document}
+	
 	\maketitle
+
 	\thispagestyle{empty}
 	\newpage
 	
