Repasada la memoria de la colaboración

--- a/3 GII/Colaboracion/Memoria/Cap1.tex
+++ b/3 GII/Colaboracion/Memoria/Cap1.tex
@@ -2,15 +2,15 @@
 \section{¿Qué es WPA2?} %Definición de WPA2
 Es un protocolo de seguridad, desarrollado por la Wi-Fi Alliance, que cifra los mensajes en las redes inalámbricas para permitir comunicaciones seguras entre un host y un punto de acceso.
 
-WPA2 salió al mercado en 2004 con el estandar 802.11i (o IEEE 802.11i-2004) e incluye sopoerte para CCMP\footnote{CCMP es un modo de encriptación basado en AES con gran seguridad.}.
+WPA2 salió al mercado en 2004 con el estándar 802.11i (o IEEE 802.11i-2004) e incluye soporte para CCMP\footnote{CCMP es un modo de encriptación basado en AES con gran seguridad.}.
 
 
 Tenemos dos versiones de WPA2:
 
 \subsection{WPA2-Personal} %Definición de PSK
-Es conocido también como ``WPA2-PSK''. Está diseñado para redes domésticas y pequeñas oficinas y no requiere un servidor de autentificación. cada dispositivo de la red inalámbrica encripta eltráfico dered derivando su clave d cifrado de una clave compartida. Esta clave se puede ingresar como una cadena o como una \textbf{passphrase} de carácteres ASCII.
+Es conocido también como ``WPA2-PSK''. Está diseñado para redes domésticas y pequeñas oficinas y no requiere un servidor de autentificación. Cada dispositivo de la red inalámbrica encripta el tráfico de red derivando su clave d cifrado de una clave compartida. Esta clave se puede ingresar como una cadena o como una \textbf{passphrase} de caracteres ASCII.
 
 \subsection{WPA2-Enterprise} %Definición de Radius
-También se conoce como ``WPA2 801.11mode''. Está diseñado para redes empresariales y requiere de un servidor RADIUS de autenticación. Lo que requiere una mayor configuración pero proporciona mayor seguridad.
+También se conoce como ``WPA2 801.11 mode''. Está diseñado para redes empresariales y necesita un servidor RADIUS de autentificación. Lo que requiere una mayor configuración pero proporciona mayor seguridad.
 
 %Luego, decir que nos centramos en PSK para el ataque.
