--- a/3 GII/Colaboracion/Memoria/Cap2.tex
+++ b/3 GII/Colaboracion/Memoria/Cap2.tex
@@ -7,12 +7,12 @@ Para ello usaremos un ordenador con sistema operativo GNU/Linux como puede ser D
 \section{Conocemos la passphrase}
 Cuando conocemos la passphrase, podemos dirigirnos a la señal Wi-Fi del AP al cual queremos conectarnos e introducirla manualmente como un usuario normal y estaremos dentro de la red.
 
-Con la finalidad de obtener las credenciales de un usuario, debemos prepararnos para un ataque Man-in-the-Middle\footnote{Un ataque Man in-the-Middle es aquel en el que se un atacante adquiere la capacidad de leer, insertar y/o modificar a voluntad propia el contenido de los paquetes enviados por una víctima y capturados por dicho atacante.}, que usaremos para obtener los datos.
+Con la finalidad de obtener las credenciales de un usuario, debemos prepararnos para un ataque Man-in-the-Middle\footnote{Un ataque Man in-the-Middle es aquel en el que un atacante adquiere la capacidad de leer, insertar y/o modificar, a voluntad propia, el contenido de los paquetes enviados por una víctima y capturados por dicho atacante.}, que usaremos para obtener los datos.
 
 \subsection{Instalación de Ettercap}
-Ettercap es un sniffer que hace posible la inyección de datos en una conexión establecida y filtrado al vuelo aun manteniendo la conexión sincronizada, lo que nos permitirá recrear un ataque Man-in-the-Middle.
+Ettercap es un sniffer que hace posible la inyección de datos en una conexión establecida manteniendo dicha conexión sincronizada, lo que nos permitirá recrear un ataque Man-in-the-Middle.
 
-Para instalar ettercap en modo gráfico deberemos seguir los siguientes pasos:
+Para instalar Ettercap en modo gráfico deberemos seguir los siguientes pasos:
 \begin{enumerate}
 	\item Nos dirigimos a la terminal e introducimos los siguientes comandos para instalar los paquetes previos:
 	\begin{center}
@@ -39,7 +39,7 @@ Para instalar ettercap en modo gráfico deberemos seguir los siguientes pasos:
 	\end{center}
 \end{enumerate}
 
-\Nota Si estamos usando Kali Linux (o algún otro sistema operativo enfocado en la seguridad informática y/o hacking ético) puede venir instalado por defecto.
+\Nota Si estamos usando Kali Linux (o algún otro sistema operativo enfocado en la seguridad informática y/o hacking ético) tenemos que tener en cuenta que puede venir instalado por defecto.
 
 \subsection{Preparación teórica del ataque}
 Ya tenemos todo lo necesario en nuestro ordenador para reproducir el ataque con éxito. Solo nos queda preparar el ataque y que nuestra víctima acceda a una página web con protocolo HTTP.
@@ -71,7 +71,7 @@ Por lo tanto, cuando el usuario quiere acceder a algún servicio web ocurrirá l
 	\begin{center}
 		\includegraphics[scale=0.7]{ARPpoison3.png}
 	\end{center}
-	\item El AP redirecciona el paquete a la MAC del atacante.
+	\item El AP redirecciona el paquete a la dirección MAC del atacante.
 	\begin{center}
 		\includegraphics[scale=0.7]{ARPpoison3-2.png}
 	\end{center}
@@ -86,16 +86,16 @@ Por lo tanto, el escenario resultante después de la configuración del ARP Pois
 	\includegraphics[scale=0.7]{Escenario.png}
 \end{center}
 
-\Nota En estos ejemplos se ha usado la página web \url{http://minecub.es/} por tener protoclo HTTP.
+\Nota En estos ejemplos se ha usado la página web \url{http://minecub.es/} por usar protocolo HTTP.
 
 \Nota En caso de que la red sea abierta (sin contraseña) el procedimiento es exactamente igual una vez que estamos conectados a la red. La única diferencia es que no habría cifrado dentro de la propia red.
 
 \subsubsection{HTTPS}
 HTTPS es una protocolo de aplicación basado en HTTP y destinado a la transferencia segura de paquetes HTTP, es decir, es al versión segura de HTTP.
 
-HTTPS utiliza un cifrado basado en SSL/TLS para crear un canal cifrado (cuyo nivel de cifrado depende del servidor remoto y del navegador utilizado por el cliente). De este modo se consigue que la información sensible no pueda se r usada por un atacante que haya conseguido interceptar la transferencia de datos de la conexión, ya que lo único que obtendrá seerá un flujo de datos cifrados que le resultará imposible de descifrar.
+HTTPS utiliza un cifrado basado en SSL/TLS para crear un canal cifrado (cuyo nivel de cifrado depende del servidor remoto y del navegador utilizado por el cliente). De este modo se consigue que la información sensible no pueda ser usada por un atacante que haya conseguido interceptar la transferencia de datos de la conexión, ya que lo único que obtendrá será un flujo de datos cifrados que le resultará imposible de descifrar.
 
-Por ello, para poder obtener las credenciales de usuario, se ha insistido tanto en que la web a la que acceda la vícitma tendrá que tener protocolo HTTP.
+Por ello, para poder obtener las credenciales de usuario, se ha insistido tanto en que la web a la que acceda la víctima tendrá que tener protocolo HTTP.
 
 \section{No conocemos la passphrase}
 Hasta hace poco, en el caso de no conocer la passphrase de la red Wi-Fi, no podríamos acceder a ella a no ser que usáramos un ataque de fuerza bruta o de diccionario. Pero a partir del 16 de octubre de 2017 contamos con una nueva herramienta que nos permite entrar a una red Wi-Fi sin necesidad de conocer la passphrase.
@@ -110,7 +110,7 @@ El saludo de cuatro vías de WPA2-PSK es el siguiente:
 \end{center}
 Tal como se puede ver en la imagen, una vez que el AP envía su ANonce al usuario y este construye la PTK, envía al AP su SNonce.
 
-Es en ese envío del SNonce donde ataca KRACK haciendo que se reenvíe dicho SNonce hasta uno conocido por el atacante lo que nos permitirá pertenecer a la red sin necesidad de la passphrase y podremos espiar (tal como hemos hecho en las redes donde sí conocíamos la passphrase a los usuarios).
+Es en ese envío del SNonce donde ataca KRACK haciendo que se reenvíe dicho SNonce hasta uno conocido por el atacante lo que nos permitirá pertenecer a la red sin necesidad de la passphrase y podremos espiar a los usuarios tal como hemos hecho en las redes donde sí conocíamos la passphrase.
 
 \subsubsection{Recursos para usar KRACK}
 Para realizar el ataque KRACK nos harán falta los siguientes recursos:
@@ -118,6 +118,6 @@ Para realizar el ataque KRACK nos harán falta los siguientes recursos:
 	\item Rogue-AP: Es un punto de acceso que tiene por objetivo que los usuarios se conecten a el para, una vez dentro, capturar su tráfico.
 	\item Man-in-the-Middle.
 	\item Script KRACK\footnote{Este script fue creado por el descubridor de KRACK y no ha sido publicado en la web debido a que dicha persona (Mathy Vanhoef, estudiante en criptografía) lo comunicó directamente a la Wi-Fi Alliance que se puso manos a la obra en la creación del nuevo protocolo de seguridad, WPA3 que veremos en un futuro en funcionamiento.}.
-	\item SSLStrip: Es una applicación capaz de ``descifrar el trágico HTTPS'' que viaja a través de una red\footnote{Realmente SSLStrip no desencripta todo el tráfico HTTPS sino que solo es capaz de engañar al servidor cuando la víctima llegaa la web mediante una redirección o un link.}.
+	\item SSLStrip: Es una applicación capaz de ``descifrar el trágico HTTPS'' que viaja a través de una red\footnote{Realmente SSLStrip no desencripta todo el tráfico HTTPS sino que solo es capaz de engañar al servidor cuando la víctima llega la web mediante una redirección o un link.}.
 	\item Un sniffer: Por ejemplo Wireshark.
 \end{itemize}
