--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Practicas/Practica 2/Elipse.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Practicas/Practica 2/Elipse.tex
@@ -73,7 +73,7 @@
 % \end{lstlisting}
 
 
-\title{Análisis}
+\title{Elipse}
 \author{Jesús Rodríguez Heras}
 
 \begin{document}
@@ -81,7 +81,7 @@
 	\maketitle
 	\begin{abstract} %Poner esto en todas las prácticas de PCTR
 		\begin{center}
-			Desarrollo de la tabla con las combinaciones de los dos parámetros, su resultado y las impresiones recabadas al respecto.
+			Descripción de la elipse y ejemplo.
 		\end{center}
 	\end{abstract}
 	\thispagestyle{empty}
@@ -101,52 +101,28 @@
 	%%Configuracion del paquete listings
 	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
 
-
-\section{Tabla con las combinaciones de m, n y Ack(m, n)}
-
+\section{Descripción de la ecuación}
+\noindent
 \begin{center}
-\begin{table}[htbp]
-	\begin{center}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			\textbf{m} & \textbf{n} & \textbf{Ack(m,n)}  \\
-			\hline 
-			1 & 0 & 2\\ \hline	
-			1 & 1 & 3\\ \hline	
-			1 & 2 & 5\\ \hline	
-			1 & 3 & 13\\ \hline	
-			1 & 4 & StackOverFlow\\ \hline	
-			2 & 0 & 3\\ \hline	
-			2 & 1 & 4\\ \hline	
-			2 & 2 & 7\\ \hline	
-			2 & 3 & 29\\ \hline	
-			2 & 4 & StackOverFlow\\ \hline	
-			3 & 0 & 4\\ \hline	
-			3 & 1 & 5\\ \hline	
-			3 & 2 & 9\\ \hline
-			3 & 3 & 61\\ \hline
-			3 & 4 & StackOverFlow\\ \hline
-			4 & 0 & 5\\ \hline
-			4 & 1 & 6\\ \hline
-			4 & 2 & 11\\ \hline
-			4 & 3 & 125\\ \hline
-			4 & 4 & StackOverFlow\\ \hline
-		\end{tabular}
-		\caption{Valores de la función de Ackermann.}
-		\label{tabla:Valores de la función de Ackermann}
-	\end{center}
-\end{table}
+	$\frac{(x-x_{0})^2}{a^2}+\frac{(y-y_{0})^2}{b^2}=1$
 \end{center}
 
-\section{Impresiones recabadas}
 
-Tal como vemos en la Tabla 1, la función de \textit{Ackermann} crece aún más rápido que la función exponencial $n^n$.\\
-Por ejemplo:
-\begin{center}
-	$3^3=9$\\
-	$Ack(3,3)=61$
-\end{center}
+\section{Descripción textual}
+\textbf{Elipse:} Figura geométrica curva y cerrada, con dos ejes perpendiculares desiguales, que resulta de cortar la superficie de un cono por un plano no perpendicular a su eje, y que tiene la forma de un circulo achatado.
 
-Sin embargo, si aumentamos la $n$ a 4 o más, obtenemos valores extremadamente grandes, que en la ejecución del programa obtendremos el error de \texttt{java.lang.StackOverflowError}, lo que significa que se ha producido un desbordamiento de la memoria en la pila de llamadas recursivas.
+
+La ecuación anterior determina la cónica elipse, siendo:
+\begin{itemize}
+	\item $x, y$: Coordenadas pertenecientes a la elipse.
+	\item $x_{0}, y_{0}$: Coordenadas $x$ e $y$ del centro de la elipse.
+	\item $a$: Semieje de abscisas (o radio mayor).
+	\item $b$: Semieje de ordenadas (o radio menor).
+\end{itemize}
+
+\section{Ejemplo}
+\noindent
+\includegraphics[scale=1]{ElipseCono.png}
+\includegraphics[scale=2.5]{Elipse.png}
 
 \end{document}
