--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Practicas/Practica 2/Estadísticos.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Practicas/Practica 2/Estadísticos.tex
@@ -73,7 +73,7 @@
 % \end{lstlisting}
 
 
-\title{Análisis}
+\title{Estadísticos}
 \author{Jesús Rodríguez Heras}
 
 \begin{document}
@@ -81,7 +81,7 @@
 	\maketitle
 	\begin{abstract} %Poner esto en todas las prácticas de PCTR
 		\begin{center}
-			Desarrollo de la tabla con las combinaciones de los dos parámetros, su resultado y las impresiones recabadas al respecto.
+			Contiene las expresiones matemáticas que definen a cada estadístico con una breve descripción textual de su significado.
 		\end{center}
 	\end{abstract}
 	\thispagestyle{empty}
@@ -101,52 +101,48 @@
 	%%Configuracion del paquete listings
 	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
 
-
-\section{Tabla con las combinaciones de m, n y Ack(m, n)}
+\section{Media}
+\subsection{Expresión matemática}
 
 \begin{center}
-\begin{table}[htbp]
-	\begin{center}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			\textbf{m} & \textbf{n} & \textbf{Ack(m,n)}  \\
-			\hline 
-			1 & 0 & 2\\ \hline	
-			1 & 1 & 3\\ \hline	
-			1 & 2 & 5\\ \hline	
-			1 & 3 & 13\\ \hline	
-			1 & 4 & StackOverFlow\\ \hline	
-			2 & 0 & 3\\ \hline	
-			2 & 1 & 4\\ \hline	
-			2 & 2 & 7\\ \hline	
-			2 & 3 & 29\\ \hline	
-			2 & 4 & StackOverFlow\\ \hline	
-			3 & 0 & 4\\ \hline	
-			3 & 1 & 5\\ \hline	
-			3 & 2 & 9\\ \hline
-			3 & 3 & 61\\ \hline
-			3 & 4 & StackOverFlow\\ \hline
-			4 & 0 & 5\\ \hline
-			4 & 1 & 6\\ \hline
-			4 & 2 & 11\\ \hline
-			4 & 3 & 125\\ \hline
-			4 & 4 & StackOverFlow\\ \hline
-		\end{tabular}
-		\caption{Valores de la función de Ackermann.}
-		\label{tabla:Valores de la función de Ackermann}
-	\end{center}
-\end{table}
+	$\bar{x}=\frac{\sum_{i=1}^{n}x_{i}}{n}$
 \end{center}
 
-\section{Impresiones recabadas}
+\subsection{Descripción}
 
-Tal como vemos en la Tabla 1, la función de \textit{Ackermann} crece aún más rápido que la función exponencial $n^n$.\\
-Por ejemplo:
+La media aritmética se obtiene a partir de la suma de todos los valores de una distribución de valores dividida entre el número de elementos de dicha distribución.
+
+\section{Moda}
+\subsection{Expresión matemática}
+
 \begin{center}
-	$3^3=9$\\
-	$Ack(3,3)=61$
+	$M=max(n_{i})$
 \end{center}
 
-Sin embargo, si aumentamos la $n$ a 4 o más, obtenemos valores extremadamente grandes, que en la ejecución del programa obtendremos el error de \texttt{java.lang.StackOverflowError}, lo que significa que se ha producido un desbordamiento de la memoria en la pila de llamadas recursivas.
+\subsection{Descripción}
+
+Es el valor que más se repite en una distribución de valores. Será el valor con mayor frecuencia absoluta de dicha distribución.
+
+\section{Varianza}
+\subsection{Expresión matemática}
+
+\begin{center}
+	$\sigma^{2}=\frac{\sum_{i=1}^{n}(x_{i}-\bar{x})^{2}}{n}$
+\end{center}
+
+\subsection{Descripción}
+
+Es una medida de dispersión que representa como de dispersos están los datos alrededor de la media.
+
+\section{Desviación típica}
+\subsection{Expresión matemática}
+
+\begin{center}
+	$\sigma=\sqrt{\sigma^{2}}$
+\end{center}
+
+\subsection{Descripción}
+
+Es una medida de dispersión que indica cómo de dispersos están dos datos respecto de la media.
 
 \end{document}
