Función de factibilidad

--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 3/Tabla.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 3/Tabla.tex
@@ -81,7 +81,7 @@
 	\maketitle
 	\begin{abstract} %Poner esto en todas las prácticas de PCTR
 		\begin{center}
-			En este documento se recoge el número de iteraciones que realizaron los dos hilos y el valor final obtenido para \textit{n}.
+			En este documento se recoge el número de iteraciones que realizan dos hilos incrementando/decrementando la variable \texttt{n} y el valor final para dicha variable.
 		\end{center}
 	\end{abstract}
 	\thispagestyle{empty}
@@ -111,13 +111,12 @@
 			\hline
 			\textbf{Iteraciones} & \textbf{Valor de n} \\
 			\hline 
-			$10^{3}$ & 0 \\ \hline	
-			$10^{4}$ & -7059 \\ \hline	
-			$10^{4}$ & -298 \\ \hline	
-			$10^{5}$ & 8597 \\ \hline	
-			$10^{5}$ & 43413 \\ \hline	
-			$10^{6}$ & -56020 \\ \hline	
-			$10^{7}$ & 91233 \\ \hline	
+			$10^{3}$ & $-283$ \\ \hline	
+			$10^{4}$ & $-7409$ \\ \hline	
+			$10^{5}$ & $-13096$ \\ \hline	
+			$10^{6}$ & $33422$ \\ \hline	
+			$10^{7}$ & $52294$ \\ \hline	
+			$10^{8}$ & $-71361382$ \\ \hline
 		\end{tabular}
 		\caption{Iteraciones de los hilos.}
 		\label{tabla:Iteraciones de los hilos}
