--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e2.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e2.tex
@@ -1,1 +1,6 @@
-Escriba aquí su respuesta al ejercicio 2.
+Para la función de factibilidad se realiza lo siguiente para todas las defensas:
+\begin{ennumerate}
+	\item Se comprueba que la defensa a colocar no se salen de las dimensiones del mapa.
+	\item Se comprueba que la defensa a colocar no colisiona con ningún obstáculo del mapa.
+	\item Se comprueba que la defensa a colocar no colisiona con ninguna defensa previamente colocada.
+\end{ennumerate}
