Arreglada la práctica 5 de PCTR

--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 5/Análisis.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 5/Análisis.tex
@@ -109,7 +109,7 @@ Al ejecutar el algoritmo de Dekker para tres procesos (\texttt{algDekker.java}),
 La interpretación que podemos hacer del mismo es que, en cada instante de tiempo, solo un único hilo estará ejecutando la sección crítica y, por lo tanto, accediendo al recurso que se encuentra en memoria compartida. Con esto, conseguimos que no se corrompan los datos del programa.
 
 \section{\texttt{algEisenbergMcGuire.java}}
-Al ejecutar el algoritmo de \texttt{Eisenberg-McGuire.java}, se nos muestra en pantalla el resultado de haber incrementado y decrementado la variable de nombre ``\texttt{variable}'' las iteraciones introducidas por teclado por cada hilo.
+Al ejecutar el programa \texttt{algEisenberg-McGuire.java}, se nos muestra en pantalla el resultado de haber incrementado y decrementado la variable de nombre ``\texttt{variable}'' dos veces, una de incremento (el primer hilo) y otra de decremento (el segundo hilo).
 
 La interpretación que podemos hacer del mismo es que ambos procesos (hilos) acceden a la sección crítica en exclusión mutua.
 
