--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 6/Análisis2.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 6/Análisis2.tex
@@ -100,14 +100,6 @@
 	
 	%%Configuracion del paquete listings
 	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
-\newpage
-\begin{figure}
-	\begin{center}
-		\includegraphics[scale=1]{SpeedUp1.png}
-		\caption{Valores del SpeedUp.}
-		\label{fig:Valores del SpeedUp}
-	\end{center}
-\end{figure}
 
 \begin{center}
 	\begin{table}[htbp]
@@ -116,20 +108,33 @@
 				\hline
 				\textbf{Elementos} & \textbf{matVector} & \textbf{matVectorConcurrente} & \textbf{matVectorDenso}  \\
 				\hline 
-				$1000$ & 0.006 & 0.078 & 0.018 \\ \hline
-				$2000$ & 0.01 & 0.152 & 0.023 \\ \hline
-				$3000$ & 0.015 & 0.217 & 0.019 \\ \hline
-				$4000$ & 0.021 & 0.305 & 0.021 \\ \hline
-				$5000$ & 0.03 & 0.414 & 0.025 \\ \hline
-				$10000$ & 0.097 & 0.868 & 0.04 \\ \hline
+				$1000$ & 0.008 & 0.075 & 0.045 \\ \hline 
+				$2000$ & 0.01 & 0.119 & 0.055 \\ \hline  
+				$3000$ & 0.013 & 0.118 & 0.034 \\ \hline 
+				$4000$ & 0.018 & 0.183 & 0.046 \\ \hline 
+				$5000$ & 0.026 & 0.24 & 0.046 \\ \hline  
+				$6000$ & 0.036 & 0.275 & 0.048 \\ \hline 
+				$7000$ & 0.046 & 0.302 & 0.049 \\ \hline 
+				$8000$ & 0.058 & 0.408 & 0.059 \\ \hline 
+				$9000$ & 0.071 & 0.434 & 0.073 \\ \hline 
+				$10000$ & 0.087 & 0.489 & 0.084 \\ \hline
 			\end{tabular}
 			\caption{Valores en segundos del tiempo usado por cada algoritmo.}
 			\label{tabla:Valores en segundos del tiempo usado por cada algoritmo}
 		\end{center}
 	\end{table}
 \end{center}
-Para la realización de la gráfica inicial, hemos tenido en cuenta dichos datos tomados en tiempo con los que calculamos el SpeedUp de los algoritmos de grano fino (\texttt{matVectorConcurrente.java}) y de grano grueso (\texttt{matVectoDenso.java}) respecto del algoritmo secuencial (\texttt{matVector.java}).\\
-Como podemos apreciar en la imagen, el SpeedUp no empieza a ser notable hasta los 4000 elementos y, donde verdaderamente se le saca partido es en los 10000 elementos, donde dicho SpeedUp alcanza casi un valor de 2,5.
+
+\begin{figure}[h]
+	\begin{center}
+				\includegraphics[scale=1]{SpeedUp1.png}
+		\caption{Valores del SpeedUp.}
+		\label{fig:Valores del SpeedUp}
+	\end{center}
+\end{figure}
+Para la realización de la gráfica inicial, hemos tenido en cuenta dichos datos tomados en tiempo con los que calculamos el Speed-Up de los algoritmos de grano fino (\texttt{matVectorConcurrente.java}) y de grano grueso (\texttt{matVectorDenso.java}) respecto del algoritmo secuencial (\texttt{matVector.java}).
+
+Como podemos apreciar en la imagen, el Speed-Up no empieza a ser notable hasta los 4000 elementos y, donde verdaderamente se le saca partido es en los 10000 elementos, donde dicho Speed-Up alcanza casi un valor de 2,5.
 
 	
 
