--- a/2 GII/1er Semestre/PCTR/Curso 2017-2018/Practicas/Practica 6/Análisis3.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2017-2018/Practicas/Practica 6/Análisis3.tex
@@ -48,7 +48,7 @@
 \usepackage{mathptm}
 
 %%% VARIOS:
-\usepackage{slashbox}
+%\usepackage{slashbox}
 \usepackage{verbatim}
 \usepackage{array}
 \usepackage{listings}
