--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e5.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e5.tex
@@ -1,1 +1,21 @@
-Escriba aquí su respuesta al ejercicio 5.
+%Escriba aquí su respuesta al ejercicio 5.
+En esta función se intenta puntuar las celdas más cercanas al centro con un valor superior a las demás con la intención de colocarlas rodeando el centro de extracción de minerales para defenderlo mejor.
+
+La función que evalúa las celdas para el caso del centro de extracción de minerales se llama \texttt{cellValueCentro} y recibe los siguientes parámetros:
+\begin{itemize}
+	\item \texttt{float** mapa}: Matriz que representa el mapa de juego.
+	\item \texttt{int nCellsWidth}: Número de celdas de ancho que tiene el mapa.
+	\item \texttt{int nCellsHeight}: Número de celdas de alto que tiene el mapa.
+	\item \texttt{float cellWidth}: Ancho de las celdas.
+	\item \texttt{float cellHeight}: Alto de las celdas.
+	\item \texttt{float mapWidth}: Tamaño de la anchura del mapa.
+	\item \texttt{float mapHeight}: Tamaño del alto del mapa.
+	\item \texttt{std::list<Defense*> defensas}: Lista de defensas del juego.
+\end{itemize}
+Para dar valores a las celdas de la matriz del terreno de batalla la función calcula la posición del centro de extracción respecto de la diferencia con los bordes del mapa en una variable de tipo \texttt{Vector3} llamado \texttt{posicionDefensa}.
+
+Luego creamos una variable de tipo \texttt{Vector3}, llamado \texttt{posMax}, que estará formada por el tamaño total del mapa en sus coordenadas ``X'' e ``Y''.
+
+A continuación, se asigna el valor de cada celda como la resta de los módulos de ambos vectores, \texttt{posMax} y \texttt{posicionDefensa}.
+
+El valor de las celdas es devuelto por la misma variable \texttt{mapa} por referencia.
