--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e1.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e1.tex
@@ -8,21 +8,22 @@
 %\label{fig:defenseValueCellsHead}
 %\end{figure}
 
-La función que evalúa las celdas para el caso del centro de extracción de minerales se llama \texttt{cellValueCentro} y recibe los siguientes parámetros:
+La función que evalúa las celdas para el caso del centro de extracción de minerales se llama \texttt{cellValue} y recibe los siguientes parámetros:
 \begin{itemize}
-	\item \texttt{float** mapa}: Matriz que representa el mapa de juego.
-	\item \texttt{int nCellsWidth}: Número de celdas de ancho que tiene el mapa.
-	\item \texttt{int nCellsHeight}: Número de celdas de alto que tiene el mapa.
-	\item \texttt{float cellWidth}: Ancho de las celdas.
-	\item \texttt{float cellHeight}: Alto de las celdas.
+	\item \texttt{int row}: Número de fila de la celda de la matriz del terreno de batalla.
+	\item \texttt{int col}: Número de columna de la celda de la matriz del terreno de batalla.
+	\item \texttt{bool** freeCells}: Matriz de booleanos que indica si una celda de la matriz está libre (\texttt{true}) o no (\texttt{false}).
+	\item \texttt{int nCellsWidht}: Número de celdas de ancho.
+	\item \texttt{int nCellsHeight}: Número de celdas de alto.
 	\item \texttt{float mapWidth}: Tamaño de la anchura del mapa.
 	\item \texttt{float mapHeight}: Tamaño del alto del mapa.
-	\item \texttt{std::list<Defense*> defensas}: Lista de defensas del juego.
+	\item \texttt{flaot cellWidht}: Tamaño de la anchura de una celda.
+	\item \texttt{float cellHeight}: Tamaño del alto de una celda.
+	\item \texttt{std::list<Object*> obstacles}: Lista de obstáculos del juego.
+	\item \texttt{std::list<Defense*> defenses}: Lista de defensas del juego.
 \end{itemize}
-Para dar valores a las celdas de la matriz del terreno de batalla la función calcula la posición del centro de extracción respecto de la diferencia con los bordes del mapa en una variable de tipo \texttt{Vector3} llamado \texttt{posicionDefensa}.
+Para dar valores a las celdas de la matriz del terreno de batalla la función comprueba primeramente que la celda de la matriz no está ocupada. Si está ocupada, devuelve \texttt{false}.
 
-Luego creamos una variable de tipo \texttt{Vector3}, llamado \texttt{posMax}, que estará formada por el tamaño total del mapa en sus coordenadas ``X'' e ``Y''.
-                                                                          
-A continuación, se asigna el valor de cada celda como la resta de los módulos de ambos vectores, \texttt{posMax} y \texttt{posicionDefensa}.
+Si no está ocupada creamos una variable de tipo \texttt{Vector3} llamada \texttt{posibleDefensa} con la posición de esa celda y luego vamos recorriendo la lista de obstáculos mientras que vamos guardando en la variable \texttt{maxDistancia} (de tipo \texttt{float}) la máxima de la inversa de la distancia euclídea (proporcionada por la función \texttt{\_distance()}) entre la posición de \texttt{posibleDefensa} y todos los obstáculos del terreno de batalla.
 
-El valor de las celdas es devuelto por la misma variable \texttt{mapa} por referencia.
+Finalmente devuelve la variable \texttt{maxDistancia} que será el valor que tenga esa celda.
