--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e6.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 1/RODRIGUEZ_HERAS_JESUS/p1/e6.tex
@@ -1,13 +1,19 @@
-\begin{lstlisting}
-// sustituya este codigo por su respuesta
-void placeDefenses(...) {
-
-    List<Defense*>::iterator currentDefense = defenses.begin();
-    while(currentDefense != defenses.end() && maxAttemps > 0) {
-
-        (*currentDefense)->position.x = ((int)(_RAND2(nCellsWidth))) * cellWidth + cellWidth * 0.5f;
-        ...
-        ++currentDefense;
-    }
-}
-\end{lstlisting}
+%\begin{lstlisting}
+%// sustituya este codigo por su respuesta
+%void placeDefenses(...) {
+%
+%    List<Defense*>::iterator currentDefense = defenses.begin();
+%    while(currentDefense != defenses.end() && maxAttemps > 0) {
+%
+%        (*currentDefense)->position.x = ((int)(_RAND2(nCellsWidth))) * cellWidth + cellWidth * 0.5f;
+%        ...
+%        ++currentDefense;
+%    }
+%}
+%\end{lstlisting}
+Continuación de la función \texttt{placeDefenses} del ejercicio 3:
+\lstinputlisting[language=C]{def6.cpp}
+Función \texttt{factibilidad}:
+\lstinputlisting[language=C]{fac.cpp}
+Función \texttt{selección}:
+\lstinputlisting[language=C]{sel.cpp}
